# bhoomi

./: .gitignore  .gitmodules  LICENSE  README.md
.github/: openssf-scorecard.yml
.github/workflows/: build.yml  cicd.yml  container-scan-navigation.yml  container-scan.yml  navigation-replica.yml  onboard-cpp.yml  pages.yml  resource-allocation.yml  scorecard.yml  template-cleanup.yml  vision-pheno.yml
book/seeker/: isbn.md.txt  seeker.kpf
book/seeker/seeker/: seeker.kcb
docs/: README.md  _config.yml  index.html
docs/_data/: authors.yml  navigation.yml  text.yml
docs/_includes/: footer.html
docs/_layouts/: home.html
docs/_posts/blog/: 2022-07-26-operating-infrastrure.md
docs/_posts/career/: 2023-01-01-cv-2.md  2023-02-16-comm-1.md  2023-02-16-ro-1.md
docs/_posts/climate/: 2023-01-04-climate-action-plan.md
docs/_posts/contest/: 2023-01-31-nda-research.md  2023-02-22-occupy-mars-1.md
docs/_posts/dev/: 2022-12-04-ci-cd-guide.md  2022-12-04-docker-guide.md  2022-12-04-docker-guidelines.md  (+4 more)
docs/blog/: index.md
docs/book/: index.md
docs/career/: index.md
docs/contest/: index.md
docs/demo/: index.md
docs/description/: index.md
docs/greenhouse/: index.md
docs/journey/: index.md
docs/milestone/: index.md
docs/project/: index.md
docs/readme/: 22-08-11-ideas.md
docs/research/: index.md
docs/sponsors/: index.md
docs/web/: 11-08-2022-todo.md  2022-08-11-todo.md
docs/why/: index.md
garuda/: Dockerfile  README.md  pom.xml
solutions/onboard/: CMakeLists.txt  README.md  main.cpp
solutions/onboard/src/: main.cpp
(+69 files in other folders)
